# binary-analysis-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: pipeline.yml
src/: candidates.rs  candidates_opcodes.rs  cli.rs  config.rs  edges.rs  endiannes.rs  extract_instructions.rs  file.rs  instructions.rs  iter_instructions.rs  main.rs  min_heap.rs  prelude.rs
src/cli/: addressing_mode.rs  cli_clap.rs  config.rs  mod.rs
src/instructions/: mod.rs
