[package]
name = "binary-analysis-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
clap-num = "1.0.2"
itertools = "0.11.0"
rustc-hash = "1.1.0"
rayon = "1.7.0"

[profile.release]
debug = true
